Actualizar la versión de Java a 17 en pom.xml; refactorizar la validación de usuario en ValidationService; corregir la configuración de la base de datos en application.properties; ajustar prueba de UserServiceImplTest para acceder al primer usuario correctamente.